// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Components: DatePicker > should render correctly 1`] = `
<div>
  <div
    class="ring-date-picker"
    style="position: relative; display: inline-flex;"
  >
    <div
      class="MuiFormControl-root MuiPickersTextField-root css-dw2vup-MuiFormControl-root-MuiPickersTextField-root"
      data-testid="ring-datepicker"
    >
      <div
        aria-invalid="false"
        class="MuiPickersInputBase-root MuiPickersFilledInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedStart css-lwzpzt-MuiPickersInputBase-root-MuiPickersInput-root"
        role="group"
      >
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-wt76vb-MuiInputAdornment-root"
        >
          <span
            aria-hidden="true"
            class="notranslate"
          >
            ​
          </span>
          <button
            aria-label="Choose date"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-umkvbu-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="CalendarMonthIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 16H5V10h14zM9 14H7v-2h2zm4 0h-2v-2h2zm4 0h-2v-2h2zm-8 4H7v-2h2zm4 0h-2v-2h2zm4 0h-2v-2h2z"
              />
            </svg>
          </button>
        </div>
        <div
          class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-ka3j6r-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer"
          contenteditable="false"
          tabindex="0"
        >
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="0"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Month"
              aria-readonly="false"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="0"
            >
              MM
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              /
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="1"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Day"
              aria-readonly="false"
              aria-valuemax="31"
              aria-valuemin="1"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              DD
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              /
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="2"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Year"
              aria-readonly="false"
              aria-valuemax="9999"
              aria-valuemin="0"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              YYYY
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
          </span>
        </div>
        <input
          aria-hidden="true"
          class="MuiPickersInputBase-input MuiPickersFilledInput-input css-31lcvl-MuiPickersInputBase-input"
          id="_r_1_"
          tabindex="-1"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Components: DatePicker > should render correctly with Now button 1`] = `
<div>
  <div
    class="ring-date-picker"
    style="position: relative; display: inline-flex;"
  >
    <div
      class="MuiFormControl-root MuiPickersTextField-root css-dw2vup-MuiFormControl-root-MuiPickersTextField-root"
      data-testid="ring-datepicker"
    >
      <div
        aria-invalid="false"
        class="MuiPickersInputBase-root MuiPickersFilledInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedStart css-lwzpzt-MuiPickersInputBase-root-MuiPickersInput-root"
        role="group"
      >
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-wt76vb-MuiInputAdornment-root"
        >
          <span
            aria-hidden="true"
            class="notranslate"
          >
            ​
          </span>
          <button
            aria-label="Choose date"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-umkvbu-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="CalendarMonthIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 16H5V10h14zM9 14H7v-2h2zm4 0h-2v-2h2zm4 0h-2v-2h2zm-8 4H7v-2h2zm4 0h-2v-2h2zm4 0h-2v-2h2z"
              />
            </svg>
          </button>
        </div>
        <div
          class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-ka3j6r-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer"
          contenteditable="false"
          tabindex="0"
        >
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="0"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Month"
              aria-readonly="false"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="0"
            >
              MM
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              /
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="1"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Day"
              aria-readonly="false"
              aria-valuemax="31"
              aria-valuemin="1"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              DD
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              /
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="2"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Year"
              aria-readonly="false"
              aria-valuemax="9999"
              aria-valuemin="0"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              YYYY
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
          </span>
        </div>
        <input
          aria-hidden="true"
          class="MuiPickersInputBase-input MuiPickersFilledInput-input css-31lcvl-MuiPickersInputBase-input"
          id="_r_t_"
          tabindex="-1"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Components: DatePicker > should render correctly with custom actions 1`] = `
<div>
  <div
    class="ring-date-picker"
    style="position: relative; display: inline-flex;"
  >
    <div
      class="MuiFormControl-root MuiPickersTextField-root css-dw2vup-MuiFormControl-root-MuiPickersTextField-root"
      data-testid="ring-datepicker"
    >
      <div
        aria-invalid="false"
        class="MuiPickersInputBase-root MuiPickersFilledInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedStart MuiPickersInputBase-adornedEnd css-lwzpzt-MuiPickersInputBase-root-MuiPickersInput-root"
        role="group"
      >
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-wt76vb-MuiInputAdornment-root"
        >
          <span
            aria-hidden="true"
            class="notranslate"
          >
            ​
          </span>
          <button
            aria-label="Choose date"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-umkvbu-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="CalendarMonthIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 16H5V10h14zM9 14H7v-2h2zm4 0h-2v-2h2zm4 0h-2v-2h2zm-8 4H7v-2h2zm4 0h-2v-2h2zm4 0h-2v-2h2z"
              />
            </svg>
          </button>
        </div>
        <div
          class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-ka3j6r-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer"
          contenteditable="false"
          tabindex="0"
        >
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="0"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Month"
              aria-readonly="false"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="0"
            >
              MM
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              /
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="1"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Day"
              aria-readonly="false"
              aria-valuemax="31"
              aria-valuemin="1"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              DD
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              /
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="2"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Year"
              aria-readonly="false"
              aria-valuemax="9999"
              aria-valuemin="0"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              YYYY
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
          </span>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-hiqy5m-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1hon42z-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1fbstsb-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
            data-testid="MoreVertIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
            />
          </svg>
        </button>
        <input
          aria-hidden="true"
          class="MuiPickersInputBase-input MuiPickersFilledInput-input css-31lcvl-MuiPickersInputBase-input"
          id="_r_11_"
          tabindex="-1"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Components: DatePicker > should render correctly with custom actions and Now button 1`] = `
<div>
  <div
    class="ring-date-picker"
    style="position: relative; display: inline-flex;"
  >
    <div
      class="MuiFormControl-root MuiPickersTextField-root css-dw2vup-MuiFormControl-root-MuiPickersTextField-root"
      data-testid="ring-datepicker"
    >
      <div
        aria-invalid="false"
        class="MuiPickersInputBase-root MuiPickersFilledInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedStart MuiPickersInputBase-adornedEnd css-lwzpzt-MuiPickersInputBase-root-MuiPickersInput-root"
        role="group"
      >
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-wt76vb-MuiInputAdornment-root"
        >
          <span
            aria-hidden="true"
            class="notranslate"
          >
            ​
          </span>
          <button
            aria-label="Choose date"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-umkvbu-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="CalendarMonthIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 16H5V10h14zM9 14H7v-2h2zm4 0h-2v-2h2zm4 0h-2v-2h2zm-8 4H7v-2h2zm4 0h-2v-2h2zm4 0h-2v-2h2z"
              />
            </svg>
          </button>
        </div>
        <div
          class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-ka3j6r-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer"
          contenteditable="false"
          tabindex="0"
        >
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="0"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Month"
              aria-readonly="false"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="0"
            >
              MM
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              /
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="1"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Day"
              aria-readonly="false"
              aria-valuemax="31"
              aria-valuemin="1"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              DD
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              /
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="2"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Year"
              aria-readonly="false"
              aria-valuemax="9999"
              aria-valuemin="0"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              YYYY
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
          </span>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-hiqy5m-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1hon42z-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1fbstsb-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
            data-testid="MoreVertIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
            />
          </svg>
        </button>
        <input
          aria-hidden="true"
          class="MuiPickersInputBase-input MuiPickersFilledInput-input css-31lcvl-MuiPickersInputBase-input"
          id="_r_17_"
          tabindex="-1"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Components: DatePicker > should render correctly with custom labels 1`] = `
<div>
  <div
    class="ring-date-picker"
    style="position: relative; display: inline-flex;"
  >
    <div
      class="MuiFormControl-root MuiPickersTextField-root css-dw2vup-MuiFormControl-root-MuiPickersTextField-root"
      data-testid="ring-datepicker"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard css-1tjmaom-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="true"
        for="_r_5_"
        id="_r_5_-label"
      >
        Custom Date
      </label>
      <div
        aria-invalid="false"
        aria-labelledby="_r_5_-label"
        class="MuiPickersInputBase-root MuiPickersFilledInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedStart css-lwzpzt-MuiPickersInputBase-root-MuiPickersInput-root"
        role="group"
      >
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-wt76vb-MuiInputAdornment-root"
        >
          <span
            aria-hidden="true"
            class="notranslate"
          >
            ​
          </span>
          <button
            aria-label="Choose date"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-umkvbu-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="CalendarMonthIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 16H5V10h14zM9 14H7v-2h2zm4 0h-2v-2h2zm4 0h-2v-2h2zm-8 4H7v-2h2zm4 0h-2v-2h2zm4 0h-2v-2h2z"
              />
            </svg>
          </button>
        </div>
        <div
          class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-ka3j6r-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer"
          contenteditable="false"
          tabindex="0"
        >
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="0"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Month"
              aria-readonly="false"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="0"
            >
              MM
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              /
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="1"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Day"
              aria-readonly="false"
              aria-valuemax="31"
              aria-valuemin="1"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              DD
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              /
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="2"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Year"
              aria-readonly="false"
              aria-valuemax="9999"
              aria-valuemin="0"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              YYYY
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
          </span>
        </div>
        <input
          aria-hidden="true"
          class="MuiPickersInputBase-input MuiPickersFilledInput-input css-31lcvl-MuiPickersInputBase-input"
          id="_r_5_"
          tabindex="-1"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Components: DatePicker > should render correctly with default value 1`] = `
<div>
  <div
    class="ring-date-picker"
    style="position: relative; display: inline-flex;"
  >
    <div
      class="MuiFormControl-root MuiPickersTextField-root css-kbmkdb-MuiFormControl-root-MuiPickersTextField-root"
      data-testid="ring-datepicker"
    >
      <div
        aria-invalid="false"
        class="MuiPickersInputBase-root MuiPickersFilledInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedStart MuiPickersInputBase-adornedEnd css-lwzpzt-MuiPickersInputBase-root-MuiPickersInput-root"
        role="group"
      >
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-wt76vb-MuiInputAdornment-root"
        >
          <span
            aria-hidden="true"
            class="notranslate"
          >
            ​
          </span>
          <button
            aria-label="Choose date, selected date is Jan 1, 2022"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-umkvbu-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="CalendarMonthIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 16H5V10h14zM9 14H7v-2h2zm4 0h-2v-2h2zm4 0h-2v-2h2zm-8 4H7v-2h2zm4 0h-2v-2h2zm4 0h-2v-2h2z"
              />
            </svg>
          </button>
        </div>
        <div
          class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-ka3j6r-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer"
          contenteditable="false"
          tabindex="0"
        >
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="0"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Month"
              aria-readonly="false"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuenow="1"
              aria-valuetext="January"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="0"
            >
              01
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              /
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="1"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Day"
              aria-readonly="false"
              aria-valuemax="31"
              aria-valuemin="1"
              aria-valuenow="1"
              aria-valuetext="1st"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              01
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              /
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="2"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Year"
              aria-readonly="false"
              aria-valuemax="9999"
              aria-valuemin="0"
              aria-valuenow="2022"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              2022
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
          </span>
        </div>
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-1g27vwb-MuiInputAdornment-root"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium clearButton css-jqd0wj-MuiButtonBase-root-MuiIconButton-root"
            tabindex="-1"
            title="Clear"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-jpafmv-MuiSvgIcon-root"
              data-testid="ClearIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
        </div>
        <input
          aria-hidden="true"
          class="MuiPickersInputBase-input MuiPickersFilledInput-input css-31lcvl-MuiPickersInputBase-input"
          id="_r_9_"
          tabindex="-1"
          value="01/01/2022"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Components: DatePicker > should render correctly with empty actions 1`] = `
<div>
  <div
    class="ring-date-picker"
    style="position: relative; display: inline-flex;"
  >
    <div
      class="MuiFormControl-root MuiPickersTextField-root css-dw2vup-MuiFormControl-root-MuiPickersTextField-root"
      data-testid="ring-datepicker"
    >
      <div
        aria-invalid="false"
        class="MuiPickersInputBase-root MuiPickersFilledInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedStart MuiPickersInputBase-adornedEnd css-lwzpzt-MuiPickersInputBase-root-MuiPickersInput-root"
        role="group"
      >
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-wt76vb-MuiInputAdornment-root"
        >
          <span
            aria-hidden="true"
            class="notranslate"
          >
            ​
          </span>
          <button
            aria-label="Choose date"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-umkvbu-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="CalendarMonthIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 16H5V10h14zM9 14H7v-2h2zm4 0h-2v-2h2zm4 0h-2v-2h2zm-8 4H7v-2h2zm4 0h-2v-2h2zm4 0h-2v-2h2z"
              />
            </svg>
          </button>
        </div>
        <div
          class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-ka3j6r-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer"
          contenteditable="false"
          tabindex="0"
        >
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="0"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Month"
              aria-readonly="false"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="0"
            >
              MM
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              /
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="1"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Day"
              aria-readonly="false"
              aria-valuemax="31"
              aria-valuemin="1"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              DD
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            >
              /
            </span>
          </span>
          <span
            class="MuiPickersSectionList-section css-1yisgne-MuiPickersSectionList-section-MuiPickersInputBase-section"
            data-sectionindex="2"
          >
            <span
              class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
            <span
              aria-disabled="false"
              aria-label="Year"
              aria-readonly="false"
              aria-valuemax="9999"
              aria-valuemin="0"
              aria-valuetext="Empty"
              autocapitalize="none"
              autocorrect="off"
              class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-w074wb-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
              contenteditable="true"
              inputmode="numeric"
              role="spinbutton"
              spellcheck="false"
              tabindex="-1"
            >
              YYYY
            </span>
            <span
              class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
            />
          </span>
        </div>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-hiqy5m-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1hon42z-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1fbstsb-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
            data-testid="MoreVertIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
            />
          </svg>
        </button>
        <input
          aria-hidden="true"
          class="MuiPickersInputBase-input MuiPickersFilledInput-input css-31lcvl-MuiPickersInputBase-input"
          id="_r_n_"
          tabindex="-1"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
